--- a/package.json
+++ b/package.json
@@ -9,19 +9,22 @@
     "dev": "remix build && run-p dev:*",
     "dev:node": "cross-env NODE_ENV=development nodemon ./build/index.js --watch ./build/index.js",
     "dev:remix": "remix watch",
-    "start": "cross-env NODE_ENV=production node ./build/index.js"
+    "start": "cross-env NODE_ENV=production node ./build/index.js",
+    "update-blog-list": "ts-node updateBlogList.ts"
   },
   "dependencies": {
     "@remix-run/express": "^1.3.4",
     "@remix-run/node": "^1.3.4",
     "@remix-run/react": "^1.3.4",
+    "@types/voca": "^1.4.2",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "remix": "^1.3.4"
+    "remix": "^1.3.4",
+    "voca": "^1.4.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.3.4",
@@ -31,6 +34,7 @@
     "eslint": "^8.11.0",
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
+    "ts-node": "^10.7.0",
     "typescript": "^4.5.5"
   },
   "engines": {
